debug.y.output
Terminals unused in grammar

   T_MOD
   T_EXP
   T_FLOOR
   T_BIT_AND
   T_BIT_OR
   T_BIT_N_XOR
   T_BIT_RSH
   T_BIT_LSH
   T_OPENBRACE
   T_CLOSEBRACE
   T_OPENBRACKET
   T_CLOSEBRACKET
   T_CONCAT
   T_LIST
   T_SEP
   T_COLON
   T_TRUE
   T_FALSE
   T_REPEAT
   T_UNTIL
   T_BREAK
   T_GLOBAL
   T_IN
   T_LABEL
   T_LITERAL


State 37 conflicts: 8 shift/reduce
State 55 conflicts: 12 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: bloco

    2 bloco: comando comandoret
    3      | comandoret
    4      | comando
    5      | %empty

    6 comando: comando comando
    7        | T_SEMICOL
    8        | chamadadefuncao
    9        | listadenomes T_ASSIGN listaexp
   10        | T_DO bloco T_END
   11        | T_WHILE exp T_DO bloco T_END
   12        | T_FOR T_NAME T_ASSIGN exp T_COMMA exp T_COMMA exp T_DO bloco T_END
   13        | T_FOR T_NAME T_ASSIGN exp T_COMMA exp T_DO bloco T_END
   14        | T_IF exp T_THEN bloco term_elseif T_ELSE bloco T_END
   15        | T_IF exp T_THEN bloco term_elseif T_END
   16        | T_FUNCTION T_NAME T_OPENPAR listadenomes T_CLOSEPAR bloco T_END
   17        | T_FUNCTION T_NAME T_OPENPAR T_CLOSEPAR bloco T_END
   18        | T_LOCAL listadenomes T_ASSIGN listaexp
   19        | T_LOCAL listadenomes

   20 term_elseif: term_elseif T_ELSEIF exp T_THEN bloco
   21            | %empty

   22 comandoret: T_RETURN listaexp T_SEMICOL
   23           | T_RETURN listaexp
   24           | T_RETURN T_SEMICOL
   25           | T_RETURN

   26 exp: T_NIL
   27    | T_NUMBER
   28    | T_NAME
   29    | chamadadefuncao
   30    | opbin
   31    | opunaria exp
   32    | T_OPENPAR exp T_CLOSEPAR

   33 chamadadefuncao: T_NAME T_OPENPAR listaexp T_CLOSEPAR
   34                | T_NAME T_OPENPAR T_CLOSEPAR

   35 listadenomes: T_NAME
   36             | listadenomes T_COMMA T_NAME

   37 listaexp: exp
   38         | listaexp T_COMMA exp

   39 opbin: exp T_PLUS exp
   40      | exp T_MINUS exp
   41      | exp T_TIMES exp
   42      | exp T_DIV exp
   43      | exp T_LT exp
   44      | exp T_LTEQ exp
   45      | exp T_GT exp
   46      | exp T_GTEQ exp
   47      | exp T_EQ exp
   48      | exp T_NEQ exp
   49      | exp T_AND exp
   50      | exp T_OR exp

   51 opunaria: T_MINUS
   52         | T_NOT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PLUS (258) 39
T_MINUS (259) 40 51
T_TIMES (260) 41
T_DIV (261) 42
T_MOD (262)
T_EXP (263)
T_FLOOR (264)
T_EQ (265) 47
T_NEQ (266) 48
T_LTEQ (267) 44
T_GTEQ (268) 46
T_LT (269) 43
T_GT (270) 45
T_COMMA (271) 12 13 36 38
T_SEMICOL (272) 7 22 24
T_ASSIGN (273) 9 12 13 18
T_BIT_AND (274)
T_BIT_OR (275)
T_BIT_N_XOR (276)
T_BIT_RSH (277)
T_BIT_LSH (278)
T_OPENPAR (279) 16 17 32 33 34
T_CLOSEPAR (280) 16 17 32 33 34
T_OPENBRACE (281)
T_CLOSEBRACE (282)
T_OPENBRACKET (283)
T_CLOSEBRACKET (284)
T_CONCAT (285)
T_LIST (286)
T_SEP (287)
T_COLON (288)
T_AND (289) 49
T_OR (290) 50
T_NOT (291) 52
T_IF (292) 14 15
T_ELSEIF (293) 20
T_ELSE (294) 14
T_THEN (295) 14 15 20
T_FOR (296) 12 13
T_WHILE (297) 11
T_DO (298) 10 11 12 13
T_END (299) 10 11 12 13 14 15 16 17
T_RETURN (300) 22 23 24 25
T_FUNCTION (301) 16 17
T_LOCAL (302) 18 19
T_NIL (303) 26
T_TRUE (304)
T_FALSE (305)
T_REPEAT (306)
T_UNTIL (307)
T_BREAK (308)
T_GLOBAL (309)
T_IN (310)
T_NUMBER (311) 27
T_LABEL (312)
T_LITERAL (313)
T_NAME (314) 12 13 16 17 28 33 34 35 36


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
programa (61)
    on left: 1, on right: 0
bloco (62)
    on left: 2 3 4 5, on right: 1 10 11 12 13 14 15 16 17 20
comando (63)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 2 4 6
term_elseif (64)
    on left: 20 21, on right: 14 15 20
comandoret (65)
    on left: 22 23 24 25, on right: 2 3
exp (66)
    on left: 26 27 28 29 30 31 32, on right: 11 12 13 14 15 20 31 32
    37 38 39 40 41 42 43 44 45 46 47 48 49 50
chamadadefuncao (67)
    on left: 33 34, on right: 8 29
listadenomes (68)
    on left: 35 36, on right: 9 16 18 19 36
listaexp (69)
    on left: 37 38, on right: 9 18 22 23 33 38
opbin (70)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50, on right: 30
opunaria (71)
    on left: 51 52, on right: 31


State 0

    0 $accept: . programa $end

    T_SEMICOL   shift, and go to state 1
    T_IF        shift, and go to state 2
    T_FOR       shift, and go to state 3
    T_WHILE     shift, and go to state 4
    T_DO        shift, and go to state 5
    T_RETURN    shift, and go to state 6
    T_FUNCTION  shift, and go to state 7
    T_LOCAL     shift, and go to state 8
    T_NAME      shift, and go to state 9

    $default  reduce using rule 5 (bloco)

    programa         go to state 10
    bloco            go to state 11
    comando          go to state 12
    comandoret       go to state 13
    chamadadefuncao  go to state 14
    listadenomes     go to state 15


State 1

    7 comando: T_SEMICOL .

    $default  reduce using rule 7 (comando)


State 2

   14 comando: T_IF . exp T_THEN bloco term_elseif T_ELSE bloco T_END
   15        | T_IF . exp T_THEN bloco term_elseif T_END

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 22
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 3

   12 comando: T_FOR . T_NAME T_ASSIGN exp T_COMMA exp T_COMMA exp T_DO bloco T_END
   13        | T_FOR . T_NAME T_ASSIGN exp T_COMMA exp T_DO bloco T_END

    T_NAME  shift, and go to state 26


State 4

   11 comando: T_WHILE . exp T_DO bloco T_END

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 27
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 5

   10 comando: T_DO . bloco T_END

    T_SEMICOL   shift, and go to state 1
    T_IF        shift, and go to state 2
    T_FOR       shift, and go to state 3
    T_WHILE     shift, and go to state 4
    T_DO        shift, and go to state 5
    T_RETURN    shift, and go to state 6
    T_FUNCTION  shift, and go to state 7
    T_LOCAL     shift, and go to state 8
    T_NAME      shift, and go to state 9

    $default  reduce using rule 5 (bloco)

    bloco            go to state 28
    comando          go to state 12
    comandoret       go to state 13
    chamadadefuncao  go to state 14
    listadenomes     go to state 15


State 6

   22 comandoret: T_RETURN . listaexp T_SEMICOL
   23           | T_RETURN . listaexp
   24           | T_RETURN . T_SEMICOL
   25           | T_RETURN .

    T_MINUS    shift, and go to state 16
    T_SEMICOL  shift, and go to state 29
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    $default  reduce using rule 25 (comandoret)

    exp              go to state 30
    chamadadefuncao  go to state 23
    listaexp         go to state 31
    opbin            go to state 24
    opunaria         go to state 25


State 7

   16 comando: T_FUNCTION . T_NAME T_OPENPAR listadenomes T_CLOSEPAR bloco T_END
   17        | T_FUNCTION . T_NAME T_OPENPAR T_CLOSEPAR bloco T_END

    T_NAME  shift, and go to state 32


State 8

   18 comando: T_LOCAL . listadenomes T_ASSIGN listaexp
   19        | T_LOCAL . listadenomes

    T_NAME  shift, and go to state 33

    listadenomes  go to state 34


State 9

   33 chamadadefuncao: T_NAME . T_OPENPAR listaexp T_CLOSEPAR
   34                | T_NAME . T_OPENPAR T_CLOSEPAR
   35 listadenomes: T_NAME .

    T_OPENPAR  shift, and go to state 35

    $default  reduce using rule 35 (listadenomes)


State 10

    0 $accept: programa . $end

    $end  shift, and go to state 36


State 11

    1 programa: bloco .

    $default  reduce using rule 1 (programa)


State 12

    2 bloco: comando . comandoret
    4      | comando .
    6 comando: comando . comando

    T_SEMICOL   shift, and go to state 1
    T_IF        shift, and go to state 2
    T_FOR       shift, and go to state 3
    T_WHILE     shift, and go to state 4
    T_DO        shift, and go to state 5
    T_RETURN    shift, and go to state 6
    T_FUNCTION  shift, and go to state 7
    T_LOCAL     shift, and go to state 8
    T_NAME      shift, and go to state 9

    $default  reduce using rule 4 (bloco)

    comando          go to state 37
    comandoret       go to state 38
    chamadadefuncao  go to state 14
    listadenomes     go to state 15


State 13

    3 bloco: comandoret .

    $default  reduce using rule 3 (bloco)


State 14

    8 comando: chamadadefuncao .

    $default  reduce using rule 8 (comando)


State 15

    9 comando: listadenomes . T_ASSIGN listaexp
   36 listadenomes: listadenomes . T_COMMA T_NAME

    T_COMMA   shift, and go to state 39
    T_ASSIGN  shift, and go to state 40


State 16

   51 opunaria: T_MINUS .

    $default  reduce using rule 51 (opunaria)


State 17

   32 exp: T_OPENPAR . exp T_CLOSEPAR

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 41
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 18

   52 opunaria: T_NOT .

    $default  reduce using rule 52 (opunaria)


State 19

   26 exp: T_NIL .

    $default  reduce using rule 26 (exp)


State 20

   27 exp: T_NUMBER .

    $default  reduce using rule 27 (exp)


State 21

   28 exp: T_NAME .
   33 chamadadefuncao: T_NAME . T_OPENPAR listaexp T_CLOSEPAR
   34                | T_NAME . T_OPENPAR T_CLOSEPAR

    T_OPENPAR  shift, and go to state 35

    $default  reduce using rule 28 (exp)


State 22

   14 comando: T_IF exp . T_THEN bloco term_elseif T_ELSE bloco T_END
   15        | T_IF exp . T_THEN bloco term_elseif T_END
   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_PLUS   shift, and go to state 42
    T_MINUS  shift, and go to state 43
    T_TIMES  shift, and go to state 44
    T_DIV    shift, and go to state 45
    T_EQ     shift, and go to state 46
    T_NEQ    shift, and go to state 47
    T_LTEQ   shift, and go to state 48
    T_GTEQ   shift, and go to state 49
    T_LT     shift, and go to state 50
    T_GT     shift, and go to state 51
    T_AND    shift, and go to state 52
    T_OR     shift, and go to state 53
    T_THEN   shift, and go to state 54


State 23

   29 exp: chamadadefuncao .

    $default  reduce using rule 29 (exp)


State 24

   30 exp: opbin .

    $default  reduce using rule 30 (exp)


State 25

   31 exp: opunaria . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 55
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 26

   12 comando: T_FOR T_NAME . T_ASSIGN exp T_COMMA exp T_COMMA exp T_DO bloco T_END
   13        | T_FOR T_NAME . T_ASSIGN exp T_COMMA exp T_DO bloco T_END

    T_ASSIGN  shift, and go to state 56


State 27

   11 comando: T_WHILE exp . T_DO bloco T_END
   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_PLUS   shift, and go to state 42
    T_MINUS  shift, and go to state 43
    T_TIMES  shift, and go to state 44
    T_DIV    shift, and go to state 45
    T_EQ     shift, and go to state 46
    T_NEQ    shift, and go to state 47
    T_LTEQ   shift, and go to state 48
    T_GTEQ   shift, and go to state 49
    T_LT     shift, and go to state 50
    T_GT     shift, and go to state 51
    T_AND    shift, and go to state 52
    T_OR     shift, and go to state 53
    T_DO     shift, and go to state 57


State 28

   10 comando: T_DO bloco . T_END

    T_END  shift, and go to state 58


State 29

   24 comandoret: T_RETURN T_SEMICOL .

    $default  reduce using rule 24 (comandoret)


State 30

   37 listaexp: exp .
   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_PLUS   shift, and go to state 42
    T_MINUS  shift, and go to state 43
    T_TIMES  shift, and go to state 44
    T_DIV    shift, and go to state 45
    T_EQ     shift, and go to state 46
    T_NEQ    shift, and go to state 47
    T_LTEQ   shift, and go to state 48
    T_GTEQ   shift, and go to state 49
    T_LT     shift, and go to state 50
    T_GT     shift, and go to state 51
    T_AND    shift, and go to state 52
    T_OR     shift, and go to state 53

    $default  reduce using rule 37 (listaexp)


State 31

   22 comandoret: T_RETURN listaexp . T_SEMICOL
   23           | T_RETURN listaexp .
   38 listaexp: listaexp . T_COMMA exp

    T_COMMA    shift, and go to state 59
    T_SEMICOL  shift, and go to state 60

    $default  reduce using rule 23 (comandoret)


State 32

   16 comando: T_FUNCTION T_NAME . T_OPENPAR listadenomes T_CLOSEPAR bloco T_END
   17        | T_FUNCTION T_NAME . T_OPENPAR T_CLOSEPAR bloco T_END

    T_OPENPAR  shift, and go to state 61


State 33

   35 listadenomes: T_NAME .

    $default  reduce using rule 35 (listadenomes)


State 34

   18 comando: T_LOCAL listadenomes . T_ASSIGN listaexp
   19        | T_LOCAL listadenomes .
   36 listadenomes: listadenomes . T_COMMA T_NAME

    T_COMMA   shift, and go to state 39
    T_ASSIGN  shift, and go to state 62

    $default  reduce using rule 19 (comando)


State 35

   33 chamadadefuncao: T_NAME T_OPENPAR . listaexp T_CLOSEPAR
   34                | T_NAME T_OPENPAR . T_CLOSEPAR

    T_MINUS     shift, and go to state 16
    T_OPENPAR   shift, and go to state 17
    T_CLOSEPAR  shift, and go to state 63
    T_NOT       shift, and go to state 18
    T_NIL       shift, and go to state 19
    T_NUMBER    shift, and go to state 20
    T_NAME      shift, and go to state 21

    exp              go to state 30
    chamadadefuncao  go to state 23
    listaexp         go to state 64
    opbin            go to state 24
    opunaria         go to state 25


State 36

    0 $accept: programa $end .

    $default  accept


State 37

    6 comando: comando . comando
    6        | comando comando .

    T_SEMICOL   shift, and go to state 1
    T_IF        shift, and go to state 2
    T_FOR       shift, and go to state 3
    T_WHILE     shift, and go to state 4
    T_DO        shift, and go to state 5
    T_FUNCTION  shift, and go to state 7
    T_LOCAL     shift, and go to state 8
    T_NAME      shift, and go to state 9

    T_SEMICOL   [reduce using rule 6 (comando)]
    T_IF        [reduce using rule 6 (comando)]
    T_FOR       [reduce using rule 6 (comando)]
    T_WHILE     [reduce using rule 6 (comando)]
    T_DO        [reduce using rule 6 (comando)]
    T_FUNCTION  [reduce using rule 6 (comando)]
    T_LOCAL     [reduce using rule 6 (comando)]
    T_NAME      [reduce using rule 6 (comando)]
    $default    reduce using rule 6 (comando)

    comando          go to state 37
    chamadadefuncao  go to state 14
    listadenomes     go to state 15


State 38

    2 bloco: comando comandoret .

    $default  reduce using rule 2 (bloco)


State 39

   36 listadenomes: listadenomes T_COMMA . T_NAME

    T_NAME  shift, and go to state 65


State 40

    9 comando: listadenomes T_ASSIGN . listaexp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 30
    chamadadefuncao  go to state 23
    listaexp         go to state 66
    opbin            go to state 24
    opunaria         go to state 25


State 41

   32 exp: T_OPENPAR exp . T_CLOSEPAR
   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_PLUS      shift, and go to state 42
    T_MINUS     shift, and go to state 43
    T_TIMES     shift, and go to state 44
    T_DIV       shift, and go to state 45
    T_EQ        shift, and go to state 46
    T_NEQ       shift, and go to state 47
    T_LTEQ      shift, and go to state 48
    T_GTEQ      shift, and go to state 49
    T_LT        shift, and go to state 50
    T_GT        shift, and go to state 51
    T_CLOSEPAR  shift, and go to state 67
    T_AND       shift, and go to state 52
    T_OR        shift, and go to state 53


State 42

   39 opbin: exp T_PLUS . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 68
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 43

   40 opbin: exp T_MINUS . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 69
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 44

   41 opbin: exp T_TIMES . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 70
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 45

   42 opbin: exp T_DIV . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 71
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 46

   47 opbin: exp T_EQ . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 72
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 47

   48 opbin: exp T_NEQ . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 73
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 48

   44 opbin: exp T_LTEQ . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 74
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 49

   46 opbin: exp T_GTEQ . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 75
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 50

   43 opbin: exp T_LT . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 76
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 51

   45 opbin: exp T_GT . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 77
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 52

   49 opbin: exp T_AND . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 78
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 53

   50 opbin: exp T_OR . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 79
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 54

   14 comando: T_IF exp T_THEN . bloco term_elseif T_ELSE bloco T_END
   15        | T_IF exp T_THEN . bloco term_elseif T_END

    T_SEMICOL   shift, and go to state 1
    T_IF        shift, and go to state 2
    T_FOR       shift, and go to state 3
    T_WHILE     shift, and go to state 4
    T_DO        shift, and go to state 5
    T_RETURN    shift, and go to state 6
    T_FUNCTION  shift, and go to state 7
    T_LOCAL     shift, and go to state 8
    T_NAME      shift, and go to state 9

    $default  reduce using rule 5 (bloco)

    bloco            go to state 80
    comando          go to state 12
    comandoret       go to state 13
    chamadadefuncao  go to state 14
    listadenomes     go to state 15


State 55

   31 exp: opunaria exp .
   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_PLUS   shift, and go to state 42
    T_MINUS  shift, and go to state 43
    T_TIMES  shift, and go to state 44
    T_DIV    shift, and go to state 45
    T_EQ     shift, and go to state 46
    T_NEQ    shift, and go to state 47
    T_LTEQ   shift, and go to state 48
    T_GTEQ   shift, and go to state 49
    T_LT     shift, and go to state 50
    T_GT     shift, and go to state 51
    T_AND    shift, and go to state 52
    T_OR     shift, and go to state 53

    T_PLUS    [reduce using rule 31 (exp)]
    T_MINUS   [reduce using rule 31 (exp)]
    T_TIMES   [reduce using rule 31 (exp)]
    T_DIV     [reduce using rule 31 (exp)]
    T_EQ      [reduce using rule 31 (exp)]
    T_NEQ     [reduce using rule 31 (exp)]
    T_LTEQ    [reduce using rule 31 (exp)]
    T_GTEQ    [reduce using rule 31 (exp)]
    T_LT      [reduce using rule 31 (exp)]
    T_GT      [reduce using rule 31 (exp)]
    T_AND     [reduce using rule 31 (exp)]
    T_OR      [reduce using rule 31 (exp)]
    $default  reduce using rule 31 (exp)


State 56

   12 comando: T_FOR T_NAME T_ASSIGN . exp T_COMMA exp T_COMMA exp T_DO bloco T_END
   13        | T_FOR T_NAME T_ASSIGN . exp T_COMMA exp T_DO bloco T_END

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 81
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 57

   11 comando: T_WHILE exp T_DO . bloco T_END

    T_SEMICOL   shift, and go to state 1
    T_IF        shift, and go to state 2
    T_FOR       shift, and go to state 3
    T_WHILE     shift, and go to state 4
    T_DO        shift, and go to state 5
    T_RETURN    shift, and go to state 6
    T_FUNCTION  shift, and go to state 7
    T_LOCAL     shift, and go to state 8
    T_NAME      shift, and go to state 9

    $default  reduce using rule 5 (bloco)

    bloco            go to state 82
    comando          go to state 12
    comandoret       go to state 13
    chamadadefuncao  go to state 14
    listadenomes     go to state 15


State 58

   10 comando: T_DO bloco T_END .

    $default  reduce using rule 10 (comando)


State 59

   38 listaexp: listaexp T_COMMA . exp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 83
    chamadadefuncao  go to state 23
    opbin            go to state 24
    opunaria         go to state 25


State 60

   22 comandoret: T_RETURN listaexp T_SEMICOL .

    $default  reduce using rule 22 (comandoret)


State 61

   16 comando: T_FUNCTION T_NAME T_OPENPAR . listadenomes T_CLOSEPAR bloco T_END
   17        | T_FUNCTION T_NAME T_OPENPAR . T_CLOSEPAR bloco T_END

    T_CLOSEPAR  shift, and go to state 84
    T_NAME      shift, and go to state 33

    listadenomes  go to state 85


State 62

   18 comando: T_LOCAL listadenomes T_ASSIGN . listaexp

    T_MINUS    shift, and go to state 16
    T_OPENPAR  shift, and go to state 17
    T_NOT      shift, and go to state 18
    T_NIL      shift, and go to state 19
    T_NUMBER   shift, and go to state 20
    T_NAME     shift, and go to state 21

    exp              go to state 30
    chamadadefuncao  go to state 23
    listaexp         go to state 86
    opbin            go to state 24
    opunaria         go to state 25


State 63

   34 chamadadefuncao: T_NAME T_OPENPAR T_CLOSEPAR .

    $default  reduce using rule 34 (chamadadefuncao)


State 64

   33 chamadadefuncao: T_NAME T_OPENPAR listaexp . T_CLOSEPAR
   38 listaexp: listaexp . T_COMMA exp

    T_COMMA     shift, and go to state 59
    T_CLOSEPAR  shift, and go to state 87


State 65

   36 listadenomes: listadenomes T_COMMA T_NAME .

    $default  reduce using rule 36 (listadenomes)


State 66

    9 comando: listadenomes T_ASSIGN listaexp .
   38 listaexp: listaexp . T_COMMA exp

    T_COMMA  shift, and go to state 59

    $default  reduce using rule 9 (comando)


State 67

   32 exp: T_OPENPAR exp T_CLOSEPAR .

    $default  reduce using rule 32 (exp)


State 68

   39 opbin: exp . T_PLUS exp
   39      | exp T_PLUS exp .
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_EQ    shift, and go to state 46
    T_NEQ   shift, and go to state 47
    T_LTEQ  shift, and go to state 48
    T_GTEQ  shift, and go to state 49
    T_LT    shift, and go to state 50
    T_GT    shift, and go to state 51
    T_AND   shift, and go to state 52
    T_OR    shift, and go to state 53

    $default  reduce using rule 39 (opbin)


State 69

   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   40      | exp T_MINUS exp .
   41      | exp . T_TIMES exp
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp

    T_EQ    shift, and go to state 46
    T_NEQ   shift, and go to state 47
    T_LTEQ  shift, and go to state 48
    T_GTEQ  shift, and go to state 49
    T_LT    shift, and go to state 50
    T_GT    shift, and go to state 51
    T_AND   shift, and go to state 52
    T_OR    shift, and go to state 53

    $default  reduce using rule 40 (opbin)


State 70

   39 opbin: exp . T_PLUS exp
   40      | exp . T_MINUS exp
   41      | exp . T_TIMES exp
   41      | exp T_TIMES exp .
   42      | exp . T_DIV exp
   43      | exp . T_LT exp
   44      | exp . T_LTEQ exp
   45      | exp . T_GT exp
   46      | exp . T_GTEQ exp
   47      | exp . T_EQ exp
   48      | exp . T_NEQ exp
   49      | exp . T_AND exp
   50      | exp . T_OR exp
